[gd_scene load_steps=21 format=3 uid="uid://b582c3xff5v34"]

[ext_resource type="Texture2D" uid="uid://dq14vwl5mgf4p" path="res://Enemy Assets/Slime.png" id="1_eakqx"]
[ext_resource type="Script" path="res://Scripts/Slime.gd" id="1_o8q2l"]
[ext_resource type="PackedScene" uid="uid://l3jrk1p1oqvf" path="res://Components/health_component.tscn" id="2_tydhg"]
[ext_resource type="PackedScene" uid="uid://bp26ojm1wy0f5" path="res://Components/hitbox_component.tscn" id="3_uufss"]
[ext_resource type="PackedScene" uid="uid://csflb7k8n3yib" path="res://Components/player_detection.tscn" id="4_rww8o"]
[ext_resource type="PackedScene" uid="uid://bbnj0d2w40syb" path="res://Components/loot_component.tscn" id="6_yyi7q"]
[ext_resource type="Script" path="res://Scripts/AttackRange.gd" id="8_grtx6"]
[ext_resource type="PackedScene" uid="uid://bas0d1lmoimsp" path="res://Components/enemy_hurtbox.tscn" id="8_vvcfq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_v3aka"]
radius = 9.0

[sub_resource type="Animation" id="Animation_spn36"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_v3xnq"]
resource_name = "attack"

[sub_resource type="Animation" id="Animation_nilke"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_84qoo"]
resource_name = "idle"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_q6sfm"]
resource_name = "move"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_gm70w"]
resource_name = "stunned"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3xcp3"]
_data = {
"RESET": SubResource("Animation_spn36"),
"attack": SubResource("Animation_v3xnq"),
"die": SubResource("Animation_nilke"),
"idle": SubResource("Animation_84qoo"),
"move": SubResource("Animation_q6sfm"),
"stunned": SubResource("Animation_gm70w")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_0syah"]
radius = 101.005

[sub_resource type="CircleShape2D" id="CircleShape2D_uljac"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_63182"]
radius = 79.1581

[sub_resource type="CircleShape2D" id="CircleShape2D_jurvm"]

[node name="Slime" type="CharacterBody2D" groups=["Enemy"]]
script = ExtResource("1_o8q2l")
speed = 100

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, -2)
texture = ExtResource("1_eakqx")
hframes = 6
vframes = 4

[node name="HealthComponent" parent="." instance=ExtResource("2_tydhg")]
max_health = 100

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") groups=["Enemy"] instance=ExtResource("3_uufss")]
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_v3aka")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3xcp3")
}

[node name="PlayerDetection" parent="." instance=ExtResource("4_rww8o")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_0syah")

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_uljac")

[node name="LootComponent" parent="." instance=ExtResource("6_yyi7q")]
coins = 25

[node name="AttackRange" type="Area2D" parent="."]
script = ExtResource("8_grtx6")

[node name="AttackArea" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_63182")

[node name="AttackTimer" type="Timer" parent="AttackRange"]
wait_time = 2.0
one_shot = true

[node name="BoxTimer" type="Timer" parent="AttackRange"]
wait_time = 0.4
one_shot = true

[node name="LeapTimer" type="Timer" parent="AttackRange"]
one_shot = true

[node name="AttackPauseTimer" type="Timer" parent="AttackRange"]
wait_time = 0.2
one_shot = true

[node name="EnemyHurtbox" parent="." groups=["Enemy_Hurtbox"] instance=ExtResource("8_vvcfq")]
damage = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHurtbox"]
shape = SubResource("CircleShape2D_jurvm")

[node name="Block_Stun_Duration" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="HitboxComponent" to="." method="_on_hitbox_component_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_attack_range_body_exited"]
[connection signal="ready" from="AttackRange/AttackTimer" to="." method="_on_attack_timer_ready"]
[connection signal="timeout" from="AttackRange/AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="AttackRange/BoxTimer" to="." method="_on_box_timer_timeout"]
[connection signal="ready" from="AttackRange/AttackPauseTimer" to="." method="_on_attack_pause_timer_ready"]
[connection signal="timeout" from="AttackRange/AttackPauseTimer" to="." method="_on_attack_pause_timer_timeout"]
[connection signal="timeout" from="Block_Stun_Duration" to="." method="_on_block_stun_duration_timeout"]
